<resources>
    <string name="app_name">湖州公积金</string>


    <string name="dotDistributionActivity">网点查询</string>
    <string name="dotQueueActivity">网点预约</string>

    <string name="newsSingleActivity">公告详情</string>
    <string name="newsActivity">通知公告</string>
    <string name="advanceActivity">提前还款</string>
    <string name="zhiXunActivity">贷前咨询</string>
    <string name="findKfActivity">开发公司查询</string>
    <string name="findCompanyActivity">收款单位查询</string>
    <string name="forgetActivity">修改密码</string>
    <string name="registerActivity">用户注册</string>
    <string name="changeMoreActivity">变更明细详情</string>
    <string name="detailMoreActivity">账户明细详情</string>
    <string name="loanHistoryActivity">还款记录</string>
    <string name="userInfoActivity">个人信息</string>
    <string name="userInfoActivity2">账户信息</string>
    <string name="detailActivity">账户明细</string>
    <string name="changeActivity">变更明细</string>
    <string name="consultActivity">贷前咨询</string>
    <string name="loanMessageActivity">贷款信息</string>
    <string name="scheduleActivity">贷款进度查询</string>
    <string name="authorizationActivity">委托提取授权</string>
    <string name="payActivity">支付首付款提取授权</string>
    <string name="phoneChangeActivity">个人手机号修改</string>
    <string name="bindingActivity">银行卡绑定</string>
    <string name="activity_add_card">添加银行卡</string>
    <string name="activity_login">登录</string>


    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="enter_btn">进入应用</string>
    ：

    <!--添加银行卡-->
    <string name="add_card_kfyh">开户银行：</string>
    <string name="add_card_yhkh">银行卡号：</string>
    <string name="add_card_add">添  加</string>
    <string name="authorization_grzh">个人账号：</string>
    <string name="authorization_grxm">个人姓名：</string>
    <string name="authorization_grye">个人余额：</string>
    <string name="authorization">授权金额：</string>
    <string name="authorization_yxqksny">有效期开始年月：</string>
    <string name="authorization_yxqjsny">请选择有效期开始年月</string>
    <string name="authorzation_yxqjsny">有效期结束年月：</string>
    <string name="authorzation_qxzyxqjsny">请选择有效期结束年月</string>
    <string name="authorzation_skdwzh">收款单位账号：</string>
    <string name="qxzskdw">请选择收款单位</string>
    <string name="skdwmc">收款单位名称：</string>
    <string name="skyh">收款银行：</string>
    <string name="skyhzh">收款银行账号：</string>
    <string name="skzhm">收款账户名：</string>
    <string name="tijiao">提 交</string>
    <string name="clearall">清空</string>
    <string name="grxm">个人姓名：</string>
    <string name="grzh">个人账号：</string>
    <string name="cxlx">查询类型：</string>
    <string name="ksrq">开始日期：</string>
    <string name="jsrq">结束日期：</string>
    <string name="chaxun">查 询</string>
    <string name="yyyyt">预约营业厅：</string>
    <string name="ywlx">业务类型：</string>
    <string name="mc">名称：</string>
    <string name="address">地址：</string>
    <string name="yybh">营业编号：</string>
    <string name="ddrs">等待人数：</string>
    <string name="pjddsj">平均等待时间：</string>
    <string name="yyrq">预约日期：</string>
    <string name="qxzyyrq">请选择预约日期</string>
    <string name="yysj">预约时间：</string>
    <string name="sfzh">身份证号：</string>
    <string name="sjh">手机号：</string>
    <string name="yy">预约</string>
    <string name="qxzsqdw">请输入收款单位账号</string>
    <string name="qsrskdw">请输入收款单位名称</string>
    <string name="qsrxyh">请输入协议号</string>
    <string name="czcx">重置查询</string>
    <string name="gjjzh">公积金帐号：</string>
    <string name="qsrgjjzh">请输入公积金帐号</string>
    <string name="sfzhm">身份证号码：</string>
    <string name="qsrsfzhm">请输入身份证号码</string>
    <string name="xmm">新密码：</string>
    <string name="qsrmm">请输入密码</string>
    <string name="cxmm">12329查询密码：</string>
    <string name="znwsz">身份证后6位</string>
    <string name="sjhm">手机号码：</string>
    <string name="qsrsjhm">请输入手机号码</string>
    <string name="hqyzm">获取验证码</string>
    <string name="yzm">验证码：</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="update">修改</string>
    <string name="dkr">借款人：</string>
    <string name="jkhth">借款合同号：</string>
    <string name="dkrq">贷款日期：</string>
    <string name="dkqx">贷款期限：</string>
    <string name="jkje">借款金额：</string>
    <string name="yhbj">已还本金：</string>
    <string name="sslx">已还利息：</string>
    <string name="shfx">实还罚息：</string>
    <string name="hkfs">还款方式：</string>
    <string name="yln">月利率：</string>
    <string name="dkye">贷款余额：</string>
    <string name="syqs">剩余期数：</string>
    <string name="yczt">月冲状态：</string>
    <string name="fwdz">房屋地址：</string>
    <string name="bqyhbj">本期应还本金：</string>
    <string name="bqyylx">本期应还利息：</string>
    <string name="bqyhhj">本期应还合计：</string>
    <string name="bqyhhj1">本期已还合计：</string>
    <string name="yqje">逾期金额：</string>
    <string name="ljyqcs">累计逾期次数：</string>
    <string name="ckhkjl">查看还款记录</string>
    <string name="qsrgrgjjh">请输入个人公积金账号</string>
    <string name="zjdl">最近登陆</string>
    <string name="qsryhzjh">请输入用户证件号码</string>
    <string name="login">登录</string>
    <string name="futureplan">今后还款计划查询</string>
    <string name="register">新用户注册</string>
    <string name="xgmm">找回密码</string>
    <string name="tongzhi">通知</string>
    <string name="tzgjz">通知关键字：</string>
    <string name="qsrgjz">请输入关键字</string>
    <string name="zhye">账户余额：</string>
    <string name="zhlb">账号类别：</string>
    <string name="dg">对公</string>
    <string name="ssdwzh">所属单位账号：</string>
    <string name="kfgszh">开发公司账号：</string>
    <string name="qsrkfgszh">请输入开发公司账号</string>
    <string name="kfgsmc">开发公司名称：</string>
    <string name="sqje">授权金额：</string>
    <string name="gfdz">购房地区：</string>
    <string name="xxdz">详细地址：</string>
    <string name="submit">提交</string>
    <string name="zjlx">证件类型：</string>
    <string name="zjhm">证件号码：</string>
    <string name="zhiye">职业：</string>
    <string name="ysjh">原手机号：</string>
    <string name="xsjh">新手机号：</string>
    <string name="name">姓名：</string>
    <string name="qsrndxm">请输入你的姓名</string>
    <string name="dlm">登录名：</string>
    <string name="qsrdlm">请输入登录名</string>
    <string name="mm">密码：</string>
    <string name="zcqrmm">再次确认密码：</string>
    <string name="qrmm">确认密码</string>
    <string name="dqr">贷款人：</string>
    <string name="jqhtbh">借款合同编号：</string>
    <string name="zxbh">中心编号：</string>
    <string name="jgbh">机构编号：</string>
    <string name="dkxz">贷款性质：</string>
    <string name="dkje">贷款金额：</string>
    <string name="wtyh">委托银行：</string>
    <string name="dkdqzt">贷款当前状态：</string>
    <string name="gfaddress">购房地址：</string>
    <string name="fwlx">房屋类型：</string>
    <string name="dqhjzzybh">当前环节操作员编号：</string>
    <string name="dkjd">贷款进度：</string>
    <string name="zx">注销</string>
    <string name="zjh">证件号码：</string>
    <string name="khrq">开户日期：</string>
    <string name="grzt">个人状态：</string>
    <string name="dwzh">单位账号：</string>
    <string name="dwmc">单位名称：</string>
    <string name="dwbl">单位比例：</string>
    <string name="grbl">个人比例：</string>
    <string name="btbl">补贴比例：</string>
    <string name="gzjs">工资基数：</string>
    <string name="btjs">补贴基数：</string>
    <string name="gryj">个人月缴：</string>
    <string name="dwyj">单位月缴：</string>
    <string name="btyj">补贴月缴：</string>
    <string name="hjyj">合计月缴：</string>
    <string name="ybgjjye">一般公积金余额：</string>
    <string name="zfgjjbtye">住房公积金补贴余额：</string>
    <string name="zfbtye">住房补贴余额：</string>
    <string name="hjye">合计余额：</string>
    <string name="qjje">欠缴金额：</string>
    <string name="dknx">贷款年限：</string>
    <string name="sfecdk">是否第二次贷款：</string>
    <string name="ksjs">开始计算</string>
    <string name="sqrycce">申请人月缴存额：</string>
    <string name="peyjce">配偶月缴存额：</string>
    <string name="zfzj">住房总价:</string>
    <string name="sqrxb">申请人性别：</string>
    <string name="sfyjrc">是引进人才或新就业大学生：</string>
    <string name="fwmj">房屋面积：</string>
    <string name="fwxz">房屋性质：</string>
    <string name="tdxz">土地性质：</string>
    <string name="fl">房龄（年）：</string>
    <string name="gfaddresss">购房位置：</string>
    <string name="ksjss">开始计算</string>
    <string name="kskg">计算结果：</string>
    <string name="zgdke">最高贷款额度是(元)：</string>
    <string name="dkln">贷款年利率：</string>
    <string name="sjkd">时间跨度：</string>
    <string name="sm">说明：如果您已经在微信或者网厅注册成功，请直接进行登录，登录密码为首次注册成功的密码。</string>
    <string name="kf_address_str">请选择购房城区</string>
    <string name="hkjh">还款计划</string>
</resources>
